
Key to developers
-----------------

- DP   Dave Page
- AP   Andreas Pflug
- JMP  Jean-Michel Poure
- HS   Hiroshi Saito
- AHP  Adam H. Pendleton
- MP   Marc Persuy
- DAP  Darko Prenosil
- FGP  Florian G. Pflug
- MH   Magnus Hagander

Changes
-------

Date       Dev Ver    Change details
---------- --- -----  --------------
2006-12-07 DP  1.6.2  Display the transation start time on the server status
                      windows on PostgreSQL 8.3+
2006-12-07 DP  1.6.2  Reverse engineer columns with multi-word names (like
                      'timestamp with timezone') correctly so that precision
                      and array modifiers are included properly. Per Erwin.
2006-12-07 DP  1.6.2  Add '...' to truncated column comments in table SQL, per
                      Erwin Brandstetter.
2006-12-05 DP  1.6.2  Properly size the backup dialog, per Patrick Headley.
2006-12-05 DP  1.6.2  Ensure column headers and the insert row are shown in the
                      edit grid when no rows exist in the table being editted,
                      per Bob Pawley.
2006-12-05 DP  1.6.2  Restore dialog sizes correctly.
2006-12-04 DP  1.8.0  Refactor code to remove database base classes
2006-12-04 DP  1.8.0  Remove code specific to versions of wxWidgets that we
                      no longer support.
2006-12-04 DP  1.8.0  Remove obsolete support for non-Unicode builds.
2006-12-04 DP  1.6.2  Build against PostgreSQL 8.2 on Windows.
2006-12-01 DP  1.6.2  Fix some oddities in the way current per-table vacuum
                      settings are displayed.
2006-12-01 DP  1.6.2  Fix per-table autovacuum settings for PostgreSQL >= 8.2
                      per Devrim Gunduz.
2006-12-01 DP  1.6.2  Prevent the filter/sort options dialogue being opened
                      when data is being refreshed, per Erwin.
2006-11-29 DP  1.6.1  Prevent a crash from the query too when using File ->
                      Exit on GTK.