@@ -35,6 +35,8 @@ Changes
 
 Date       Dev Ver    Change details
 ---------- --- -----  --------------
+2006-12-14 DP  1.6.2  Avoid a crash when closing the query tool on Solaris
+                      [Dhanaraj M]
 2006-12-07 DP  1.6.2  Display the transation start time on the server status
                       windows on PostgreSQL 8.3+
 2006-12-07 DP  1.6.2  Reverse engineer columns with multi-word names (like
